--- a/inflamed/index.html
+++ b/inflamed/index.html
@@ -1,82 +1,3 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-</script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -130,7 +51,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
                 <!-- Screenshot 1 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipOvaTCMwl7uAph-JrJItuFf82PknhXtAeW0kjm3=s0" alt="Login Screen" class="w-full h-auto">
+                    <img src="./assets/login.PNG" alt="Login Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Login Screen</h3>
                         <p class="text-sm mt-2">The login screen welcomes users back to Continua, offering a secure entry point with email and password fields. Users can also register or recover their password with ease.</p>
@@ -138,7 +59,7 @@
                 </div>
                 <!-- Screenshot 2 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipPYU4k1iQL9jcchLMVHWaNtPth163yJ7xYq_61c=s0" alt="Home Screen with Upcoming Appointment" class="w-full h-auto">
+                    <img src="./assets/homeScreen_intent.PNG" alt="Home Screen with Upcoming Appointment" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Home Screen with Upcoming Appointment</h3>
                         <p class="text-sm mt-2">The home screen provides a quick overview of upcoming appointments, health tracking options like surveys and food journals, and easy access to assistance and adherence tools.</p>
@@ -146,7 +67,7 @@
                 </div>
                 <!-- Screenshot 3 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipMx9nGfreOpLLiiDjaYVT728UDeQ6Qocv0EiyGn=s0" alt="Practitioner Selection Screen" class="w-full h-auto">
+                    <img src="./assets/practitionerList.PNG" alt="Practitioner Selection Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Practitioner Selection Screen</h3>
                         <p class="text-sm mt-2">Users can browse a list of available practitioners, view their specialties, locations, and recent activity, making it easy to find the right doctor for their needs.</p>
@@ -154,7 +75,7 @@
                 </div>
                 <!-- Screenshot 4 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipPyPkXmZKX5im8OVr25eAPaKzSo3UVqISdAFzq7=s0" alt="Doctor Profile and Scheduling Screen" class="w-full h-auto">
+                    <img src="./assets/schedulingA_intent.PNG" alt="Doctor Profile and Scheduling Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Doctor Profile and Scheduling Screen</h3>
                         <p class="text-sm mt-2">This screen displays a doctor's profile, including their credentials and availability. Users can select a date, duration, and time slot to schedule an appointment.</p>
@@ -162,7 +83,7 @@
                 </div>
                 <!-- Screenshot 5 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipMoT59UqkvrRK4Ezw1zxB0DPApIvIGHM0p5LLCC=s0" alt="Appointment Booking Screen" class="w-full h-auto">
+                    <img src="./assets/bookingAppointment.PNG" alt="Appointment Booking Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Appointment Booking Screen</h3>
                         <p class="text-sm mt-2">Users can confirm their appointment details, select the appointment type (e.g., video), and specify the reason for the visit before booking.</p>
@@ -170,7 +91,7 @@
                 </div>
                 <!-- Screenshot 6 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipP256NpYwoNS6EHYEXNCLZuxBu_rANLMiLvhqXO=s0" alt="Payment Screen" class="w-full h-auto">
+                    <img src="./assets/paymentAppointment.PNG" alt="Payment Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Payment Screen</h3>
                         <p class="text-sm mt-2">The payment screen allows users to review the appointment cost, select a payment method, and securely complete the transaction to confirm their booking.</p>
@@ -178,7 +99,7 @@
                 </div>
                 <!-- Screenshot 7 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipPS4PKyRH5tk61k46rkriO6fJCnhaMnSaPR8ndd=s0" alt="User Profile Screen" class="w-full h-auto">
+                    <img src="./assets/profile.PNG" alt="User Profile Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">User Profile Screen</h3>
                         <p class="text-sm mt-2">The user profile screen lets patients manage their personal information, including contact details, address, and documents like passports or driver's licenses.</p>
@@ -186,7 +107,7 @@
                 </div>
                 <!-- Screenshot 8 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipPzDUhTqe7wJApXuIwUKIdPyMI2x62OTsLXr59b=s0" alt="Video Consultation Screen" class="w-full h-auto">
+                    <img src="./assets/consultationVideo.PNG" alt="Video Consultation Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Video Consultation Screen</h3>
                         <p class="text-sm mt-2">This screen enables seamless video consultations with practitioners, offering controls for muting, ending the call, and accessing chat features for a smooth experience.</p>
@@ -194,7 +115,7 @@
                 </div>
                 <!-- Screenshot 9 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipMOUu4E1dSNbyMDhHWSoAOIVxxzdCTGA0rm6mhi=s0" alt="Health Condition Recording Screen" class="w-full h-auto">
+                    <img src="./assets/healthCondit_record.PNG" alt="Health Condition Recording Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Health Condition Recording Screen</h3>
                         <p class="text-sm mt-2">Patients can record their health conditions by selecting affected areas on a body map and rating the severity of symptoms and stress levels for better tracking.</p>
@@ -202,7 +123,7 @@
                 </div>
                 <!-- Screenshot 10 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipNfrhSyiGC_ifJNjb6GWbDdJGJHumZ3onCWjT6h=s0" alt="Head Condition Assessment Screen" class="w-full h-auto">
+                    <img src="./assets/headAssessment.PNG" alt="Head Condition Assessment Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Head Condition Assessment Screen</h3>
                         <p class="text-sm mt-2">This detailed assessment screen allows users to specify head-related symptoms, such as pain or itching, and rate their severity, with the option to upload photos for documentation.</p>
@@ -210,7 +131,7 @@
                 </div>
                 <!-- Screenshot 11 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipO3OTHAAPR2rGDzHP5ovZTY0EKTi8VwjECYNCzk=s0" alt="Chest Condition Assessment Screen" class="w-full h-auto">
+                    <img src="./assets/chestAssessment.PNG" alt="Chest Condition Assessment Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Chest Condition Assessment Screen</h3>
                         <p class="text-sm mt-2">Users can document chest-related symptoms like heart flutter or chest pain, specify severity, and add detailed notes to share with their practitioner.</p>
@@ -218,7 +139,7 @@
                 </div>
                 <!-- Screenshot 12: Adding Payment Method -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="https://lh3.googleusercontent.com/p/AF1QipOW5v48cJm16cbtgIfLfHDC5ao27RsooV7fSPli=s0" alt="Adding Payment Method Screen" class="w-full h-auto">
+                    <img src="./assets/addPaymentMethod.PNG" alt="Adding Payment Method Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Adding Payment Method Screen</h3>
                         <p class="text-sm mt-2">This screen allows users to add a new payment method by entering card details manually or scanning their card, ensuring a secure and convenient payment setup for appointments.</p>
@@ -280,5 +201,6 @@
             }
         })();
     </script>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'936022364be26741',t:'MTc0NTYwODE1NC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
