--- a/inflamed/index.html
+++ b/inflamed/index.html
@@ -54,12 +54,12 @@
                     <img src="./assets/login.PNG" alt="Login Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Login Screen</h3>
-                        <p class="text-sm mt-2">The login screen welcomes users back to Continua, offering a secure entry point with email and password fields. Users can also register or recover their password with ease.</p>
+                        <p class="text-base mt-2">The login screen welcomes users back to Continua, offering a secure entry point with email and password fields. Users can also register or recover their password with ease.</p>
                     </div>
                 </div>
                 <!-- Screenshot 2 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="./assets/homeScreen_intent.PNG" alt="Home Screen with Upcoming Appointment" class="w-full h-auto">
+                    <img src="./assets/homeScreenWithAppointment.PNG" alt="Home Screen with Upcoming Appointment" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Home Screen with Upcoming Appointment</h3>
                         <p class="text-sm mt-2">The home screen provides a quick overview of upcoming appointments, health tracking options like surveys and food journals, and easy access to assistance and adherence tools.</p>
@@ -75,7 +75,7 @@
                 </div>
                 <!-- Screenshot 4 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="./assets/schedulingA_intent.PNG" alt="Doctor Profile and Scheduling Screen" class="w-full h-auto">
+                    <img src="./assets/schedulingAppointment.PNG" alt="Doctor Profile and Scheduling Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Doctor Profile and Scheduling Screen</h3>
                         <p class="text-sm mt-2">This screen displays a doctor's profile, including their credentials and availability. Users can select a date, duration, and time slot to schedule an appointment.</p>
@@ -115,7 +115,7 @@
                 </div>
                 <!-- Screenshot 9 -->
                 <div class="screenshot rounded-lg overflow-hidden shadow-lg">
-                    <img src="./assets/healthCondit_record.PNG" alt="Health Condition Recording Screen" class="w-full h-auto">
+                    <img src="./assets/healthConditionRecord.PNG" alt="Health Condition Recording Screen" class="w-full h-auto">
                     <div class="p-4 text-center">
                         <h3 class="text-lg font-semibold text-f5c518">Health Condition Recording Screen</h3>
                         <p class="text-sm mt-2">Patients can record their health conditions by selecting affected areas on a body map and rating the severity of symptoms and stress levels for better tracking.</p>
